--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -528,10 +528,10 @@ ul.row {
 
 /* Section Latest news ============================= */
 .section-latest-news .row{
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
-/*** 4. CARD ***/
+/*** 4. CARD ***//*** 4. CARD ***/
 
 /* Card (all styles)
             ============================= */
